fix: apply linkpreview layout, dark mode, and CI cache

--- a/assets/css/linkpreview.css
+++ b/assets/css/linkpreview.css
@@ -1,52 +1,62 @@
 .jekyll-linkpreview-wrapper {
-  max-width: 600px;
+  display: flex;
+  max-width: 100%;
+  max-height: 160px;
+  border: 1px solid var(--main-border-color);
+  background-color: var(--card-bg);
+  border-radius: 8px;
+  position: relative;
+  overflow: hidden;
   margin-bottom: 20px;
 }
 
 .jekyll-linkpreview-wrapper-inner {
-  border: 1px solid rgba(0,0,0,.1);
-  padding: 12px;
-  align-items: start; /* 이미지와 텍스트 영역 세로 중앙 정렬 */
-
+  padding: 15px;
+  display: flex;
+  width: 100%;
+  align-items: start;
 }
 
 .jekyll-linkpreview-content {
-  position: relative;
-  height: 100px;
-  overflow: hidden;
-  margin-bottom: 10px;
-}
-
-.jekyll-linkpreview-image {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.jekyll-linkpreview-image img {
-  width: 100px;
-  height: 100px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  margin-right: 16px;
 }
 
 .jekyll-linkpreview-body {
-  margin-right: 110px;
-}
-
-.jekyll-linkpreview-body-nog {
-  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .jekyll-linkpreview-title {
-  font-size: 17px;
-  margin: 0 0 2px;
-  line-height: 1.3;
+  font-size: 16px;
+  margin: 0 0 4px;
+  line-height: 1.4;
+  font-weight: bold;
 }
 
 .jekyll-linkpreview-description {
-  line-height: 1.5;
+  line-height: 1.4;
   font-size: 13px;
+  margin-bottom: 8px;
+  color: var(--text-muted-color);
 }
 
 .jekyll-linkpreview-footer {
-  font-size: 11px;
+  font-size: 12px;
+  text-align: left;
+  color: var(--text-muted-color);
+}
+
+.jekyll-linkpreview-image {
+  flex-shrink: 0;
+  height: 160px;
+  aspect-ratio: 16 / 10;
+  overflow: hidden;
+  box-sizing: border-box;
+  background-size: cover;
+  background-position: center;
 }
